@@ -1,9 +1,10 @@
 ## 5.5.2
 
 - New: TODO: separate swipe and tilt effect intensity controls
-- New: TODO: frames-per-second control with optional display dependency
 - Improved: 2-ring support for 24H clock in daily random time selection
+- Improved: display refresh rate handling when battery saver is enabled
 - Improved: unified logo experience
+- Improved: "Other options" page arrangement
 - Fixed: jerky zoom animation when tilt effect was turned on (finally!)
 
 ## 5.5.1
